--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "next": "12.1.0",
+    "octokit": "^1.7.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-confetti": "^6.0.1",
+    "react-dom": "17.0.2",
+    "react-use": "^17.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
   }
 }
